syntax = "proto3";

package syft.core.store;

import "proto/core/common/uid.proto";

message StorableType {

    message StorableMapping {
        StorableType key = 1;
        StorableType value = 2;
    }

    int32 storable_int32 = 1;
    int64 storable_int64 = 2;
    string storable_string = 3;
    repeated StorableType storable_tuple = 4;
    repeated StorableType storable_list = 5;
    repeated StorableMapping storable_map = 6;
}

message StorableObject {
    syft.core.common.UID key = 1;
    StorableType data = 2;
    string description = 3;
    repeated string tags = 4;
}